--- a/Assignment-2/css/styles.css
+++ b/Assignment-2/css/styles.css
@@ -17,7 +17,8 @@ h1 {
     justify-content: space-evenly;
     align-items: center;
     padding: 20px;
-    height: 325px;
+    height: 400px;
+    width: 275px;
     border-radius: 20px;
 }
 #smoothie-price {
@@ -42,11 +43,15 @@ h1 {
 #smoothie-details {
     background-color: white;
     padding: 20px;
-    height: 300px;
-    width: 300px;
+    height: 400px;
+    width: 375px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
+}
+
+[for="smoothie-select"] {
+    margin: 10px;
 }
