--- a/Assignment-3/css/styles.css
+++ b/Assignment-3/css/styles.css
@@ -24,7 +24,7 @@ h2 {
     text-align: center;
     background-color: white;
     padding: 10px;
-    width: 200px;
+    width: fit-content;
     border-radius: 20px;
     margin: 10px auto;
 }
